back-end/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end
  labels:
    app.kubernetes.io/part-of: jpat
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kans
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kans
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10000
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          name: this
          image: kaap:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              protocol: TCP
              name: api
            - containerPort: 3001
              protocol: TCP
              name: probe
            - containerPort: 9100
              name: http-metrics
          resources:
            requests:
              memory: 32Mi
              cpu: 250m
            limits:
              memory: 64Mi
              cpu: 500m
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 15
            httpGet:
              path: /health
              port: probe
              scheme: HTTPS
          volumeMounts:
            - name: tls
              mountPath: /etc/tls
              readOnly: true
            - name: ca-crt
              mountPath: /etc/ssl/certs
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: tls-secret
        - name: ca-crt
          secret:
            secretName: ca-secret
